# frt-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
crates/frt/: Cargo.toml
crates/frt/src/: backend.rs  main.rs
crates/frt/src/commands/: build.rs
crates/libfrt/: Cargo.toml
crates/libfrt-backend-www/: Cargo.toml
crates/libfrt-backend-www/src/: lib.rs  mod.rs  profile.rs  rc.rs  stylesheet.rs
crates/libfrt-backend-www/src/entries/: common.rs  game.rs
crates/libfrt-backend-www/src/pages/: list.rs  misc.rs  mod.rs
crates/libfrt-backend-www/src/utils/: mod.rs  uri.rs
crates/libfrt-backend-www/templates/: 404.html  index.html  languages.html  list.html
crates/libfrt-backend-www/templates/peafowl-private/: base.html  base_nav.html  footer.html  header.html  list-item.html  nav.html  require-javascript.html
crates/libfrt-backend-www/www.backup/: mod.rs
crates/libfrt-backend-www/www.backup/pages/: list.rs
crates/libfrt/src/: error.rs  i18n.rs  lib.rs
crates/libfrt/src/backend/: mod.rs
crates/libfrt/src/entries/: game.rs  link.rs  media.rs  mod.rs  raw.rs
crates/libfrt/src/utils/: cwebp.rs  fs.rs  is_remote.rs  mod.rs  tengine.rs  toml.rs
demo/: stock.toml  ui.toml
demo/profiles/next/: profile.toml  ui.toml
demo/www/styles/: stylesheet_v2.yaml
demo/www/templates/: 404.html  index.html  list.html
demo/www/templates/peafowl-private/: footer.html  header.html  list-item.html  macros.html  nav.html  require-javascript.html
scripts/: import-old-gamedb.sh
scripts/ci/: build.sh  host-x86_64-debian.sh
src/frt/: main.rs
src/frt/commands/: build.rs
src/libfrt/: error.rs  i18n.rs  lib.rs  profile.rs
src/libfrt/backend/: mod.rs
src/libfrt/backend/neutral/: component.rs
src/libfrt/backend/www/: mod.rs  profile.rs  stylesheet.rs  terafn.rs
src/libfrt/backend/www.backup/: stylesheet.rs
src/libfrt/backend/www.backup/entries/: common.rs  game.rs  mod.rs
src/libfrt/backend/www.backup/pages/: misc.rs
src/libfrt/backend/www/entries/: common.rs  game.rs
src/libfrt/backend/www/pages/: index.rs  list.rs  misc.rs  mod.rs
src/libfrt/entries/: author.rs  game.rs  game_raw.rs  image.rs  link.rs  media.rs  mod.rs  raw.rs
src/libfrt/utils/: fs.rs  mod.rs  tengine.rs  toml.rs  xml.rs
