[workspace]
members = [
    "crates/libfrt",
    "crates/libfrt-backend-www",
    "crates/frt",
]

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_regex = "1.1"
toml = "0.5"
askama = "0.12"
lazy_static = "1.4"
imagesize = "0.11"

clap = { version = "4.0", features = ["derive"] }

[profile.relwithdbginfo]
inherits = "release"
debug = 1
strip = "none"

[profile.relwithdbginfo.package.frt]
debug = 1

[profile.relwithdbginfo.package.libfrt]
debug = 1

[profile.relwithdbginfo.package.libfrt-backend-www]
debug = 1

[profile.relwithdbginfo.package."*"]
debug = false