[package]
name = "frt"
version = { workspace = true }
edition = { workspace = true }

description = "2nd Gen FGI Rendering Tool - command-line interface"
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = ["UtopicPanther <upanther@furrygames.top>"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

libfrt = { path = "../libfrt" }

libfrt-backend-www = { path = "../libfrt-backend-www", optional = true }

[features]
backend-www = [ "dep:libfrt-backend-www" ]
backend-null = []
default = [ "backend-www", "backend-null" ]