[package]
name = "libfrt-backend-www"
version = { workspace = true }
edition = { workspace = true }

description = "2nd Gen FGI Rendering Tool - www backend"
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = ["UtopicPanther <upanther@furrygames.top>"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde_regex = { workspace = true }
toml = { workspace = true }
askama = { workspace = true }

libfrt = { path = "../libfrt" }