[package]
name = "libfrt"
version = "0.1.0"
edition = "2021"

description = "2nd Gen FGI Rendering Tool - core library"
readme = "README.md"
homepage = "https://about.furrygames.top/frt"
repository = "https://github.com/FurryGamesIndex/frt-rs.git"
license = "AGPL-3.0-or-later"
authors = ["UtopicPanther <upanther@furrygames.top>"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde_regex = { workspace = true }
toml = { workspace = true }
lazy_static = { workspace = true }
imagesize = { workspace = true }